todo/manifests/todo-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      # volumes:
      #   - name: data
      #     persistentVolumeClaim:
      #       claimName: todo-data-claim
      containers:
        - name: todo-backend
          image: PROJECT/TODO-BACKEND
          imagePullPolicy: Never
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
