todo/manifests/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  namespace: project
  name: todo-postgres-stset

spec:
  serviceName: todo-postgres-svc
  
  replicas: 1

  selector:
    matchLabels:
      app: todo-postgres

  template:
    metadata:
      labels:
        app: todo-postgres

    spec:
      containers:
        - name: postgres
          image: postgres:17
          
          imagePullPolicy: IfNotPresent

          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP

          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
    - metadata:
        name: postgres-data

      spec:
        accessModes:
          - ReadWriteOnce

        storageClassName: standard-rwo

        resources:
          requests:
            storage: 1Gi

---

apiVersion: v1
kind: Service

metadata:
  namespace: project
  name: todo-postgres-svc

spec:
  type: ClusterIP
  clusterIP: None

  selector:
    app: todo-postgres

  ports:
    - name: postgres
      
      port: 5432

      protocol: TCP
      
      targetPort: 5432
