todo/manifests/todo-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-backend # This is the app as declared in the deployment.
  ports:
    - port: 2345 # This is a port that is available to the cluster, in this case it is an inner communication from pod to server
      protocol: TCP
      targetPort: 3000 # This is the target port
