todo/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  namespace: project
  name: todo-app-gateway

spec:
  gatewayClassName: eg

  listeners:
    - name: http
      protocol: HTTP
      port: 80

      allowedRoutes:
        kinds:
          - kind: HTTPRoute
