todo/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: project
  name: todo-app-route

spec:
  parentRefs:
    - name: todo-app-gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /todos

      # filters:
      #   - type: URLRewrite
      #     urlRewrite:
      #       path:
      #         type: ReplacePrefixMatch
      #         replacePrefixMatch: /

      backendRefs:
        - name: todo-backend-svc
          port: 2345

    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: todo-app-svc
          port: 2345
